Add git pull rebase to workflow

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -43,4 +43,4 @@ jobs:
         git config --global user.email 'action@github.com'
         git add processed_tweets.json
         # Only commit if there are changes
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update processed tweets [skip ci]" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update processed tweets [skip ci]" && git pull --rebase && git push)
